# mle-training

./: .gitignore  README.md  env.yaml  house_value_prediction-0.0.1-py3-none-any.whl  nonstandardcode.py  pyproject.toml
.dvc/: config
.github/workflows/: setup-conda.yml
datasets/housing/: housing.csv.dvc
deploy/: Dockerfile  house_value_prediction-0.0.1-py3-none-any old.whl  house_value_prediction-0.0.1-py3-none-any.whl  requirements.txt  start.sh
deploy/scripts/: main_script.py
docs/source/: conf.py  house_value_prediction.rst  index.rst  modules.rst
notebook/: Excercise 1.ipynb  Excercise 3.ipynb
notebook - Copy/: Excercise 2.ipynb
scripts/: ingest_data_logs.txt  ingest_data_script.py  main_script.py  score_script.py  train_script.py
scripts/script_logs/: ingest_data_logs.txt  train_logs.txt
scripts_output/: housing_prepared.csv
scripts_output/ingest_data/: X_test_prepared.csv  housing_prepared.csv
scripts_output/train/: dec_tree.pkl  lin_reg.pkl
src/house-value-prediction/: data_loading.py  nonstandardcode.py
src/house_value_prediction/: data_ingestion.py  data_loading.py  data_preparation.py  ingest_data.py  main.py  models.py  nonstandardcode.py  score.py  scoring.py  train.py
src/house_value_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: data_ingestion_test.py  data_loading_test.py  data_preparation_test.py  ingest_data_test.py  installation_test.py  models_test.py  score_test.py  scoring_test.py  train_test.py
tests/script_logs/: ingest_data_logs.txt  score_logs.txt  train_logs.txt
(+18 files in other folders)
